client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&display=swap');
@import "tailwindcss";

@layer base {
  body {
    @apply bg-gray-50 text-gray-900;
  }
}

@media print {
  @page {
    size: A4;
    margin: 10mm;
  }
  body {
    -webkit-print-color-adjust: exact;
    print-color-adjust: exact;
    background-color: white !important;
  }
}

